Add theme switch to bar

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -79,7 +79,6 @@ tooltip label {
   margin: 0px 10px 0px 10px;
 }
 
-
 .module_essid {
     font-size: 18;
     color: #a1bdce;
@@ -437,4 +436,11 @@ color: #bfc9db;
 
 .empty {
     color: #3e424f;
+}
+
+
+.theme_module {
+  font-size: 22;
+  color: #a1bdce;
+  border-radius: 16px;
 }
