Add margin to ws switcher

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -418,9 +418,13 @@ color: #bfc9db;
 
 // ----------------------------------------
 
+.right_modules {
+    margin-left: 10px;
+}
+
 .workspaces-widget {
     // TODO this doesn't work
-    // margin: 5px 0px 10px 20px;
+    // margin: 5px 0px 20px 20px;
 }
 
 .current {
